--- a/record.html
+++ b/record.html
@@ -272,7 +272,7 @@
               datalabels: {
                 color: '#111',
                 anchor: 'end',
-                align: 'top',
+                align: 'bottom',
                 font: { weight: 'bold', size: 12 },
                 formatter: value => value
               }
