--- a/record.html
+++ b/record.html
@@ -200,7 +200,7 @@
       const table = document.createElement("table");
       const thead = `
         <thead><tr>
-          <th>日期</th><th>跑步(min)</th><th>肌力組數</th>
+          <th>日期</th><th>跑步(min)</th><th>肌力訓練</th>
           <th>壁球(min)</th><th>教練指定</th>
           <th>健行(min)</th><th>瑜伽</th><th>備註</th>
         </tr></thead>`;
