--- a/input.html
+++ b/input.html
@@ -134,9 +134,9 @@
           msg.className = "success";
           e.target.reset();
 
-          // ⏳ 2 秒後跳轉回首頁 (index.html)
+          // ⏳ 2 秒後跳轉回首頁 (read.html)
           setTimeout(() => {
-            window.location.href = "index.html";
+            window.location.href = "read.html";
           }, 2000);
         } else {
           throw new Error(text);
