--- a/input.html
+++ b/input.html
@@ -2,7 +2,9 @@
 <html lang="zh-TW">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>新增運動紀錄</title>
+
   <style>
     body {
       font-family: "Segoe UI", Arial, sans-serif;
@@ -62,7 +64,7 @@
 
   <form id="form">
     <label for="password">密碼：</label>
-    <input type="password" id="password" required placeholder="請輸入密碼">
+    <input type="password" id="password" autocomplete="new-password" required placeholder="請輸入密碼">
 
     <label for="date">日期：</label>
     <input type="date" id="date" required>
@@ -94,7 +96,7 @@
   <div id="msg"></div>
 
   <script>
-    // ✅ 你的 Apps Script 網址（已部署）
+    // ✅ 你的 Apps Script 網址（記得保持一致）
     const GAS_URL = "https://script.google.com/macros/s/AKfycbz_Nt8uowVUbs3JaadH500R_5lj1ee4Ghk4i-jAGrbfDdl2IYErG_XgwyRhO-_Mc4HG/exec";
 
     // ✅ 與 Google Apps Script 相同的密碼
@@ -113,6 +115,7 @@
       e.preventDefault();
       const msg = document.getElementById("msg");
       msg.textContent = "";
+      msg.className = "";
 
       const pwd = document.getElementById("password").value.trim();
       if (pwd !== PASSWORD) {
@@ -136,21 +139,18 @@
       try {
         const res = await fetch(GAS_URL, {
           method: "POST",
-          body: JSON.stringify(data),
-          headers: { "Content-Type": "application/json" }
+          mode: "cors",
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(data)
         });
 
         const text = await res.text();
+        console.log("伺服器回應：", text);
 
         if (text.includes("OK")) {
           msg.textContent = "✅ 成功新增或更新該日紀錄！";
           msg.className = "success";
           e.target.reset();
-
-          // 2 秒後回到紀錄頁
-          setTimeout(() => {
-            window.location.href = "record.html";
-          }, 2000);
         } else if (text.includes("Unauthorized")) {
           msg.textContent = "❌ 密碼錯誤";
           msg.className = "error";
@@ -161,11 +161,9 @@
       } catch (err) {
         msg.textContent = "⚠️ 傳送失敗：" + err.message;
         msg.className = "error";
+        console.error("Fetch Error:", err);
       }
     });
   </script>
 </body>
 </html>
-
-
-
